--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "start": "umi dev",
     "build": "umi build",
     "build:analyze": "set ANALYZE=1&&umi build",
-    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
+    "prettier": "prettier --write **/*.{js,jsx,tsx,ts,less,md,json}",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage"
   },
@@ -21,7 +21,6 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
-    "@types/react-grid-layout": "^1.1.1",
     "@umijs/preset-react": "1.x",
     "antd": "^4.15.3",
     "axios": "^0.21.1",
@@ -32,7 +31,6 @@
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-draggable": "^4.4.3",
-    "react-grid-layout": "^1.2.4",
     "socket.io-client": "2.4.0",
     "styled-components": "^5.2.1",
     "umi": "^3.4.14"
